--- a/app/src/main/res/layout/activity_calculo_nota.xml
+++ b/app/src/main/res/layout/activity_calculo_nota.xml
@@ -16,7 +16,8 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Parcial 2"
-        android:inputType="textPersonName"
+        android:inputType="number"
+        android:textColor="#000000"
         android:textColorHint="#000000"
         android:textSize="20sp"
         android:textStyle="italic"
@@ -34,7 +35,8 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Quices"
-        android:inputType="textPersonName"
+        android:inputType="number"
+        android:textColor="#000000"
         android:textColorHint="#000000"
         android:textSize="20sp"
         android:textStyle="italic"
@@ -52,7 +54,8 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Parcial 1"
-        android:inputType="textPersonName"
+        android:inputType="number"
+        android:textColor="#000000"
         android:textColorHint="#000000"
         android:textSize="20sp"
         android:textStyle="italic"
@@ -70,7 +73,8 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Proyecto Parcial 2"
-        android:inputType="textPersonName"
+        android:inputType="number"
+        android:textColor="#000000"
         android:textColorHint="#000000"
         android:textSize="20sp"
         android:textStyle="italic"
@@ -102,7 +106,8 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Proyecto Parcial 1"
-        android:inputType="textPersonName"
+        android:inputType="number"
+        android:textColor="#000000"
         android:textColorHint="#000000"
         android:textSize="20sp"
         android:textStyle="italic"
