--- a/app/src/main/res/layout/activity_calculo_nota.xml
+++ b/app/src/main/res/layout/activity_calculo_nota.xml
@@ -8,7 +8,7 @@
     tools:context=".CalculoNotaActivity">
 
     <EditText
-        android:id="@+id/editTextP2"
+        android:id="@+id/et5"
         android:layout_width="347dp"
         android:layout_height="62dp"
         android:layout_marginStart="32dp"
@@ -16,7 +16,7 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Parcial 2"
-        android:inputType="number"
+        android:inputType="number|numberDecimal"
         android:textColor="#000000"
         android:textColorHint="#000000"
         android:textSize="20sp"
@@ -24,10 +24,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextP1" />
+        app:layout_constraintTop_toBottomOf="@+id/et4" />
 
     <EditText
-        android:id="@+id/editTextQ"
+        android:id="@+id/et3"
         android:layout_width="347dp"
         android:layout_height="62dp"
         android:layout_marginStart="32dp"
@@ -35,7 +35,7 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Quices"
-        android:inputType="number"
+        android:inputType="number|numberDecimal"
         android:textColor="#000000"
         android:textColorHint="#000000"
         android:textSize="20sp"
@@ -43,10 +43,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPP2" />
+        app:layout_constraintTop_toBottomOf="@+id/et2" />
 
     <EditText
-        android:id="@+id/editTextP1"
+        android:id="@+id/et4"
         android:layout_width="347dp"
         android:layout_height="62dp"
         android:layout_marginStart="32dp"
@@ -54,7 +54,7 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Parcial 1"
-        android:inputType="number"
+        android:inputType="number|numberDecimal"
         android:textColor="#000000"
         android:textColorHint="#000000"
         android:textSize="20sp"
@@ -62,10 +62,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextQ" />
+        app:layout_constraintTop_toBottomOf="@+id/et3" />
 
     <EditText
-        android:id="@+id/editTextPP2"
+        android:id="@+id/et2"
         android:layout_width="347dp"
         android:layout_height="62dp"
         android:layout_marginStart="32dp"
@@ -73,17 +73,17 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Proyecto Parcial 2"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:textColor="#000000"
         android:textColorHint="#000000"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPP1" />
+        app:layout_constraintTop_toBottomOf="@+id/et1" />
 
     <TextView
-        android:id="@+id/tituloCalculoNota"
+        android:id="@+id/tv1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -98,7 +98,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextPP1"
+        android:id="@+id/et1"
         android:layout_width="347dp"
         android:layout_height="62dp"
         android:layout_marginStart="32dp"
@@ -106,17 +106,17 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Proyecto Parcial 1"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:textColor="#000000"
         android:textColorHint="#000000"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tituloCalculoNota" />
+        app:layout_constraintTop_toBottomOf="@+id/tv1" />
 
     <Button
-        android:id="@+id/calcularBtn"
+        android:id="@+id/bn1"
         android:layout_width="151dp"
         android:layout_height="65dp"
         android:layout_marginTop="32dp"
@@ -127,5 +127,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextP2" />
+        app:layout_constraintTop_toBottomOf="@+id/et5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
