--- a/app/src/main/res/layout/activity_calculo_nota.xml
+++ b/app/src/main/res/layout/activity_calculo_nota.xml
@@ -16,13 +16,12 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Parcial 2"
-        android:inputType="number|numberDecimal"
+        android:inputType="numberDecimal"
         android:textColor="#000000"
         android:textColorHint="#000000"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et4" />
 
@@ -35,13 +34,12 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Quices"
-        android:inputType="number|numberDecimal"
+        android:inputType="numberDecimal"
         android:textColor="#000000"
         android:textColorHint="#000000"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et2" />
 
@@ -54,13 +52,12 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Parcial 1"
-        android:inputType="number|numberDecimal"
+        android:inputType="numberDecimal"
         android:textColor="#000000"
         android:textColorHint="#000000"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et3" />
 
